--- a/Speciality-Metals/src/app/components/login/login-component/home-component/home-component/home-component.component.html
+++ b/Speciality-Metals/src/app/components/login/login-component/home-component/home-component/home-component.component.html
@@ -6,14 +6,10 @@
   </mat-toolbar>
   
   <div class="home-container">
-    <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/supplier" >
-        <mat-icon>attach_money</mat-icon> Supplier
-      </button>
-    </mat-card>
+    
     
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/incoming" >
+      <button mat-raised-button class="menu-button" (click)="goToViewIncomings()">
         <mat-icon>calendar_today</mat-icon> Incoming products 
       </button>
     </mat-card>
@@ -28,27 +24,12 @@
         <mat-icon>calendar_today</mat-icon> Sundry
       </button>
     </mat-card>
-    
+
     <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/employee-home" >
-        <mat-icon>person</mat-icon> Staff 
+      <button mat-raised-button class="menu-button" routerLink="/incoming">
+        <mat-icon>person</mat-icon> Admin Menu
       </button>
     </mat-card>
     
-    <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/reporting" >
-        <mat-icon>settings</mat-icon> Reporting 
-      </button>
-    </mat-card>
     
-    <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/products">
-        <mat-icon>inventory</mat-icon> Products 
-      </button>
-    </mat-card>
-    <mat-card class="menu-card">
-      <button mat-raised-button class="menu-button" routerLink="/customer">
-        <mat-icon>person</mat-icon> Customers 
-      </button>
-    </mat-card>
   </div>
