--- a/Speciality-Metals/src/app/app.component.css
+++ b/Speciality-Metals/src/app/app.component.css
@@ -22,4 +22,17 @@
     background-color: #3f51b5;
     color: white;
   }
+  .global-top-buttons {
+  position: fixed;
+  top: 16px;
+  right: 16px;
+  display: flex;
+  gap: 12px;
+  z-index: 1000;
+}
+
+.global-top-buttons button {
+  background-color: white;
+  border-radius: 50%;
+}
   
