--- a/Speciality-Metals/src/app/components/login/login-component/login-component/login-component.component.html
+++ b/Speciality-Metals/src/app/components/login/login-component/login-component/login-component.component.html
@@ -9,10 +9,13 @@
             {{ loginError }}
           </div>
           
-          <!-- Employee Code as Password Field -->
+          <!-- Employee Code as Password Field with Toggle -->
           <mat-form-field appearance="fill" class="full-width">
             <mat-label>Employee Code</mat-label>
-            <input matInput [type]="'password'" formControlName="employeeCode" placeholder="Enter your Employee Code">
+            <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="employeeCode" placeholder="Enter your Employee Code">
+            <button mat-icon-button matSuffix (click)="togglePasswordVisibility()" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword" type="button">
+              <mat-icon>{{hidePassword ? 'visibility' : 'visibility_off'}}</mat-icon>
+            </button>
             <mat-error *ngIf="loginForm.get('employeeCode')?.hasError('required')">
               Employee Code is required
             </mat-error>
@@ -28,4 +31,3 @@
       </mat-card-footer>
     </mat-card>
   </div>
-  
